# identity

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
.github/actions/setup-dioxus/: action.yaml
.github/actions/setup-leptos/: action.yaml
.github/actions/setup-node/: action.yaml
.github/workflows/: analysis.yaml  cd.yaml  tests.yaml
api/: Cargo.toml
api/src/: constants.rs  handlers.rs  main.rs  params.rs
app/: Cargo.toml  build.rs  playwright.config.js  style.css
app/end2end/: login_and_logout.spec.js  package-lock.json  package.json  playwright.config.js  register.spec.js  shared_expects.js  update_profile.spec.js
app/end2end/tests/: home.spec.js
app/src/: app.rs  components.rs  config.rs  constants.rs  handlers.rs  hooks.rs  icons.rs  layouts.rs  lib.rs  local_data.rs  main.rs  presenters.rs  requests.rs  routes.rs  server.rs  server_fns.rs  storage.rs  utils.rs
app/src/components/: current_user.rs  form.rs  logo.rs  mod.rs  modal.rs  navbar.rs
app/src/pages/: authorize_page.rs  change_password_page.rs  edit_email_page.rs  edit_profile_page.rs  email_page.rs  home_page.rs  home_parent_page.rs  login_page.rs  mod.rs  register_page.rs  reset_password_page.rs
app/src/server_fns/: mod.rs  session_server_fns.rs  user_server_fns.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: commands.rs  config.rs  constants.rs  enums.rs  inputs.rs  jobs.rs  jobs_storage.rs  lib.rs  models.rs  params.rs  test_utils.rs
core/src/commands/: access_token_commands.rs  application_commands.rs  application_token_commands.rs  authorization_commands.rs  confirmation_commands.rs  mod.rs  session_commands.rs  user_commands.rs  user_password_commands.rs
migrations/: 20251001173649_create_table_users.up.sql  20251003140736_create_table_sessions.up.sql  20251007171620_create_table_applications.up.sql  20251007184056_create_table_authorizations.up.sql  20251102170646_create_table_confirmations.down.sql  20251102170646_create_table_confirmations.up.sql  20251104142355_add_email_confirmed_at_to_users.down.sql  20251104142355_add_email_confirmed_at_to_users.up.sql  20251110195600_add_columns_to_sessions.down.sql  20251110195600_add_columns_to_sessions.up.sql  20251215180015_add_webhooks_to_applications.down.sql  20251215180015_add_webhooks_to_applications.up.sql  20260211035800_create_table_sessions.up.sql  20260212023120_create_table_applications.up.sql  20260213154828_create_table_authorizations.up.sql  20260216145042_create_table_access_tokens.up.sql  20260310220243_alter_table_access_tokens.down.sql  20260310220243_alter_table_access_tokens.up.sql  20260325190306_create_table_confirmations.down.sql  20260325190306_create_table_confirmations.up.sql  20260408150524_create_table_application_tokens.down.sql  20260408150524_create_table_application_tokens.up.sql  20260422183150_add_column_trusted_at_to_applications.down.sql  20260422183150_add_column_trusted_at_to_applications.up.sql
monitor/: Cargo.toml
monitor/src/: config.rs  handlers.rs  ip_geo.rs  jobs.rs  mailer.rs  main.rs
