[workspace]
resolver = "3"
members = ["app", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://id.mango3.app"
repository = "https://github.com/mangocubed/identity"

[workspace.dependencies]
anyhow = "1.0.101"
apalis = "1.0.0-rc.3"
chrono = { version = "0.4.43", features = ["serde"] }
envconfig = "0.11.1"
rust_iso3166 = "0.1.14"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["serde"] }
validator = "0.20.0"
identity-core = { path = "./core", default-features = false }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
