[workspace]
resolver = "3"
members = ["api", "app", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.7"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://id.mango3.app"
repository = "https://github.com/mangocubed/identity"

[workspace.dependencies]
anyhow = "1.0.102"
apalis = "1.0.0-rc.6"
chrono = { version = "0.4.44", features = ["serde"] }
envconfig = "0.11.1"
http = "1.4.0"
rust_iso3166 = "0.1.14"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", features = ["serde"] }
validator = "0.20.0"
identity-core = { path = "./core", default-features = false }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
