[package]
name = "identity-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { workspace = true }
headers = "0.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { workspace = true }

identity-core = { workspace = true }
sdk = { workspace = true, features = ["server"] }
