[package]
name = "identity-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono.workspace = true
envconfig.workspace = true
http.workspace = true
sentry = { workspace = true, features = ["tower-http"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
identity-core.workspace = true
toolbox.workspace = true
