[package]
name = "identity-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8.8", optional = true }
axum-client-ip = { version = "1.3.1", optional = true }
chrono.workspace = true
cookie = "0.18.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
envconfig = { workspace = true, optional = true }
gloo-timers = { version = "0.4", features = ["futures"] }
http = { workspace = true, optional = true }
leptos = "0.8.17"
leptos_axum = { version = "0.8.8", optional = true }
leptos_meta = "0.8.6"
leptos_router = "0.8.12"
rust_iso3166.workspace = true
sentry = { workspace = true, features = ["tower-http"], optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx-core = { version = "0.8.6", optional = true }
time = { version = "0.3.47", optional = true }
tokio = { workspace = true, optional = true }
tower-http = { version = "0.6.8", features = ["trace"], optional = true }
tower-sessions = { version = "=0.15.0", features = [
    "private",
], optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
tracing = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true
validator.workspace = true
wasm-bindgen = { version = "0.2.114", optional = true }
web-sys = "0.3.91"
identity-core = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = [
    "dep:anyhow",
    "dep:axum",
    "dep:axum-client-ip",
    "dep:envconfig",
    "dep:http",
    "dep:leptos_axum",
    "dep:sentry",
    "dep:sqlx-core",
    "dep:time",
    "dep:tokio",
    "dep:tower-http",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:tracing",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:identity-core",
]

[package.metadata.leptos]
output-name = "application"
site-root = "target/app"
site-pkg-dir = "pkg"
assets-dir = "assets"
site-addr = "127.0.0.1:8000"
reload-port = 8001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-input-file = "style.css"
hash-files = true
hash-file-name = "hash-app.txt"
