[package]
name = "identity-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
ab_glyph = "0.2.32"
anyhow.workspace = true
apalis.workspace = true
apalis-redis = "1.0.0-rc.4"
argon2 = "0.5.3"
base64 = "0.22.1"
cached = { version = "0.58.0", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
envconfig.workspace = true
image = "0.25.9"
imageproc = "0.26.1"
rand = "0.10.0"
regex = "1.12.3"
rust_iso3166.workspace = true
serde.workspace = true
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
tokio.workspace = true
url.workspace = true
uuid.workspace = true
validator = { workspace = true, features = ["derive"] }
