[package]
name = "identity-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
ab_glyph = "0.2.32"
anyhow.workspace = true
apalis.workspace = true
apalis-redis = "1.0.0-rc.7"
argon2 = "0.5.3"
base64 = "0.22.1"
cached = { version = "0.59.0", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
envconfig.workspace = true
image = "0.25.10"
imageproc = "0.26.1"
rand = "0.10.1"
regex = "1.12.3"
rust_iso3166.workspace = true
sentry.workspace = true
serde.workspace = true
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
validator = { workspace = true, features = ["derive"] }
toolbox = { workspace = true, features = ["validator"] }
