[package]
name = "identity-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
apalis = { workspace = true, features = ["sentry"] }
chrono.workspace = true
envconfig.workspace = true
lettre = { version = "0.11.19", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
reqwest = { version = "0.13.2", features = ["json"] }
sentry = { workspace = true, features = ["tower"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
identity-core.workspace = true
