[package]
name = "identity-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
apalis = { workspace = true, features = ["sentry"] }
chrono.workspace = true
envconfig.workspace = true
reqwest = { version = "0.13.2", features = ["json"] }
sentry = { workspace = true, features = ["tower"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
identity-core.workspace = true
toolbox = { workspace = true, features = ["mailer"] }
